services/handbrake/resources/handbrake.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - image: jlesage/handbrake
          name: handbrake
          ports:
            - name: web
              containerPort: 5800
          volumeMounts:
            - name: ripping-storage
              mountPath: /output
      volumes:
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: ripping-storage

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: handbrake.durbin.casa
    external-dns.alpha.kubernetes.io/internal-hostname: handbrake.durbn.xyz
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: 'handbrake.durbin.casa'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - hosts:
        - handbrake.durbin.casa
      secretName: handbrake-ingress-cert
